prevent cells from overflow grid

--- a/sort/www/style.css
+++ b/sort/www/style.css
@@ -87,7 +87,7 @@
 .zoom-in {
   transform: scale(2);
   /*TODO calculate scale plus margins, so that it fits exactly*/
-  transition: all 0.2s;
+  transition: all 0.2s ease-in-out;
 }
 
 
